<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
        >


    <TextView android:layout_height="wrap_content" android:id="@+id/title"
              android:text="@string/explain_pick_text1"
              android:layout_width="wrap_content"

              android:textSize="22sp"

              android:layout_marginLeft="12dip"
              android:layout_marginRight="12dip"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="6dip"
            />


    <TextView android:layout_height="wrap_content" android:id="@+id/explanation_text"
              android:text="@string/explain_pick_text2"
              android:layout_width="wrap_content"


              android:layout_marginLeft="24dip"
              android:layout_marginRight="12dip"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="6dip"

              android:layout_below="@id/title"
            />

    <LinearLayout
            android:id="@+id/bottom_bar"
            android:orientation="horizontal"
            android:background="@android:drawable/bottom_bar"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/bluetoothButton"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/ok_setup_bluetooth"
                android:layout_weight="1.0" />

        <Button
                android:id="@+id/lessonButton"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/lessons"
                android:layout_weight="1.0" />

        <Button
                android:id="@+id/standaloneButton"
                android:layout_width="0.0dip" android:layout_height="fill_parent"
                android:text="@string/i_wanna_rock"
                android:layout_weight="1.0" />


    </LinearLayout>

    <ImageView android:layout_below="@id/explanation_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/bitarfeature_whitewash"
               android:layout_above="@id/bottom_bar"
               android:layout_centerHorizontal="true"
               android:layout_margin="4dip"
            />

</RelativeLayout>
